<resources>
    <string name="app_name">Hangman</string>
    <string name="welcome">welcome</string>
    <string name="tab_to_begin">Tab to begin</string>
    <string name="the_word">The word:</string>
    <string name="prevously_guesses">Previous guesses:</string>
    <string name="type_guess">Type guess:</string>
    <string name="submit">submit</string>
    <string name="error_guess_length">The guess must be %d letter(s)</string>
    <string name="won_congratulations">Congratulations</string>
    <string name="won_you_won">You won!</string>
    <string name="correct_word">The correct word was</string>
    <string name="lost_sorry">Sorry</string>
    <string name="lost_you_lost">You lost!</string>
    <string name="play_again">Play again</string>
    <string name="error_loading_online_words">Could not load words from DR.dk. Using default words.</string>
    <string name="loading_online_words">Loading words onine</string>
    <string name="menu_new_game">New game</string>
    <string name="menu_close_game">End game</string>
    <string name="view_words">View words</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
